<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="#F8F8F8"
    tools:context=".ReceiveEmailActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_host"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#333333"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center_horizontal"/>
    <EditText
        android:id="@+id/etEmailHost"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints="host@gmail.com,text/Email"
        android:hint="@string/imap_pop3_host_e_g_imap_gmail_com"
        android:layout_marginBottom="12dp"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:background="@drawable/edit_text_background"
        android:textColor="#333333"
        android:textColorHint="#A9A9A9" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="vertical">
    <EditText
        android:id="@+id/etPort"
        android:layout_marginTop="10dp"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:autofillHints="port 995, port 110"
        android:hint="@string/port_e_g_995"
        android:inputType="number"
        android:layout_marginBottom="12dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:background="@drawable/edit_text_background"
        android:textColor="#333333"
        android:textColorHint="#A9A9A9"/>
    </LinearLayout>
    <EditText
        android:id="@+id/etEmailUsername"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints="username@gmail.com"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="12dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:background="@drawable/edit_text_background"
        android:textColor="#333333"
        android:textColorHint="#A9A9A9"/>
    <EditText
        android:id="@+id/etEmailPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints="email-password,text/Password"
        android:hint="@string/email_password"
        android:inputType="textPassword"
        android:layout_marginBottom="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:background="@drawable/edit_text_background"
        android:textColor="#333333"
        android:textColorHint="#A9A9A9"/>
    <Button
        android:id="@+id/btnFetchEmails"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/fetch_emails"
        android:background="@drawable/button_background"
        android:textSize="16sp"/>
    <ListView
        android:id="@+id/lvEmails"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="8dp"/>
</LinearLayout>